# tangarin

./: .gitignore  README.md  a={"messages": [{"lc": 1, "type": "const.py  answer.md  app.py  app1.py  file_handler.py  load_db.py  load_llm.py  main.py  pyproject.toml  requirements.txt  test.ipynb  test.py  test_2.ipynb
.chainlit/: config.toml
public/: theme.json
