[project]
name = "tangarin-lg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.9.4",
    "ipykernel>=7.1.0",
    "jupytext>=1.18.1",
    "langchain>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "psycopg>=3.3.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
]
